@@ -1,4 +1,7 @@
 version 1.0.3 (not yet released)
+           * add 'round' keyword to Basemap.__init__ for pole-centered
+             projections to make them round (clipped at boundinglat) instead
+             of square.
            * fix broken daynight terminator function.
            * added kav7 (Kavrayskiy VII) and eck4 (Eckert IV) projections
              (https://github.com/matplotlib/basemap/issues/9).
